make rectangle white in color
Signed-off-by: Vivek Kumar Sahu <vivek@obmondo.com>

--- a/health-checks/configmap.yaml
+++ b/health-checks/configmap.yaml
@@ -7,4 +7,4 @@ data:
   OVAL_COLOR: "lightgreen"
   SQUARE_COLOR: "orange"
   TRIANGLE_COLOR: "white"   # use white to get a Degraded message in ArgoCD
-  RECTANGLE_COLOR: "blue" 
+  RECTANGLE_COLOR: "white" 
