--- a/nginx-app/deployment.yaml
+++ b/nginx-app/deployment.yaml
@@ -1,22 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
   labels:
     app: nginx
+  name: nginx
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
+  strategy: {}
   template:
     metadata:
       labels:
         app: nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx
+      - image: nginx
+        name: nginx
         imagePullPolicy: Always
-        ports:
+        ports: 
         - containerPort: 80
